// file: proto/config.proto
// version: 1.4.0
// guid: 5d263e60-6079-4a1e-bfcb-82e8feb6f1af

syntax = "proto3";

package subtitle.config.v1;

option go_package = "github.com/jdfalk/subtitle-manager/pkg/configpb;configpb";

// Local LogLevel enum to replace gcommon dependency
// TODO: Replace with gcommon/v1/common/log_level.proto when available
enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_TRACE = 1;
  LOG_LEVEL_DEBUG = 2;
  LOG_LEVEL_INFO = 3;
  LOG_LEVEL_WARN = 4;
  LOG_LEVEL_ERROR = 5;
  LOG_LEVEL_FATAL = 6;
}

// Local AppenderType enum to replace gcommon dependency
// TODO: Replace with gcommon/v1/common/appender_type.proto when available
enum AppenderType {
  APPENDER_TYPE_UNSPECIFIED = 0;
  APPENDER_TYPE_CONSOLE = 1;
  APPENDER_TYPE_FILE = 2;
  APPENDER_TYPE_SYSLOG = 3;
  APPENDER_TYPE_NETWORK = 4;
}

message SubtitleManagerConfig {
  string db_path = 1;
  string db_backend = 2;
  string sqlite3_filename = 3;

  // Legacy string-based log file configuration (deprecated)
  string log_file = 4;

  string google_api_key = 5;
  string openai_api_key = 6;

  // Enhanced logging configuration using local types
  // TODO: Update to use gcommon types when available
  LoggingConfig logging = 7;
}

// LoggingConfig defines comprehensive logging settings
message LoggingConfig {
  // Global log level
  LogLevel global_level = 1;

  // Primary appender type (console, file, etc.)
  AppenderType primary_appender = 2;

  // Log file path (when using file appenders)
  string log_file_path = 3;

  // Component-specific log levels
  map<string, LogLevel> component_levels = 4;

  // Enable structured JSON logging
  bool structured_logging = 5;

  // Log rotation settings
  LogRotationConfig rotation = 6;
}

// LogRotationConfig defines log file rotation settings
message LogRotationConfig {
  // Maximum file size in MB before rotation
  int32 max_size_mb = 1;

  // Maximum number of backup files to keep
  int32 max_backups = 2;

  // Maximum age in days for backup files
  int32 max_age_days = 3;

  // Compress backup files
  bool compress = 4;
}
